style.css
/* ... */
.padded-b-1 { padding-bottom: 1rem; }
.padded-l-1 { padding-left: 1rem; }
.padded-r-1 { padding-right: 1rem; }

.padded-t-9 {padding-top: 9rem;}

.padded-l-10 { padding-left: 10rem; }
.padded-r-10 { padding-right: 10rem; }

.padded-b-05 { padding-bottom: 0.5rem; }
.padded-t-05 { padding-top: 0.5rem; }

.padded-t-2 { padding-top: 2rem; }
.padded-b-2 { padding-bottom: 2rem; }
.padded-l-2 { padding-left: 2rem; }
.padded-r-2 { padding-right: 2rem; }

.padded-t-0 { padding-top: 0; }
.padded-b-0 { padding-bottom: 0; }
.padded-l-0 { padding-left: 0; }
.padded-r-0 { padding-right: 0; }

/* Margin Utility Classes */ 

.no-margin-b {margin-bottom: 0;}

.margin-t { margin-top: 5%; }
.margin-b { margin-bottom: 5%; }
.margin-l { margin-left: 5%; }
.margin-r { margin-right: 5%; }

.margin-t-1 { margin-top: 1rem; }
.margin-b-1 { margin-bottom: 1rem; }
.margin-l-1 { margin-left: 1rem; }
.margin-r-1 { margin-right: 1rem; }

.margin-t-12 { margin-top: 1.2rem; }


.margin-t-2 { margin-top: 2rem; }
.margin-b-2 { margin-bottom: 2rem; }
.margin-l-2 { margin-left: 2rem; }
.margin-r-2 { margin-right: 2rem; }

.margin-t-0 { margin-top: 0; }
.margin-b-0 { margin-bottom: 0; }
.margin-l-0 { margin-left: 0; }
.margin-r-0 { margin-right: 0; }

.margin-tb { margin-top: 5%; margin-bottom: 5%; }
.margin-lr { margin-left: 5%; margin-right: 5%; }



/* Aspect Ratio */
.portrait-tall { padding-bottom: 175%; }
.portrait { padding-bottom: 125%; }
.square { padding-bottom: 100%; }
.landscape { padding-bottom: 66%; }
.landscape-wide { padding-bottom: 56%; }

/* Background Position */
.bg-pos-t { background-position: top; }
.bg-pos-b { background-position: bottom; }
.bg-pos-l { background-position: left; }
.bg-pos-r { background-position: right; }

/* Background Position */
.bg-pos-t-l { background-position: left top; }
.bg-pos-b-r { background-position: right bottom; }


/* Background Position */
.bg-pos-t-l { background-position: 10% 10%; }
.bg-pos-b-r { background-position: 85% 85%; }

/* Forms */

form input, form textarea {
    width: 100%;
    margin: 0.5rem 0;
    padding: 0.5rem;
    border: 5px solid #393635;
    outline: none;
    font-family: inherit;
    font-size: 1.1rem;
    font-weight: 100;
    font-style: italic;
  }
  
  form input:focus, form textarea:focus{
    border-color: #B4C0B6;
  }
  
  textarea {
    min-height: 15rem;
  }
  
  form label {
    margin-top: 1rem;
    display: block;
    color: #393635;
  }
  
  form button {
    background-color: white;
    border: none;
    padding: 0.5rem 2rem;
    margin: 0.5rem 0;
    letter-spacing: 0.2rem;
    transition: 0.2s;
  }

/* Hamburger Menu */

  .hamburger-button {
    font-size: 3rem;
    cursor: pointer;
    margin-top: -0.5rem;
    position: fixed;
    top: 1.3rem;
    right: 1rem;
    z-index: 1;
  }
  
  .hamburger-button:hover {
    color: #C2CCC3;
  }
  
  .mob-menubar {
    display: none;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    background-color: #2F2C2C;
    position: fixed;
  }
  
  .mob-menubar a {
    display: block;
    text-align: center;
    padding: 1rem;
    color: white;
  }

.mob-show {
    display: none;
}

/* Media Queryw */

@media (max-width: 48em) {

    .mob-show { display: block; }
    .mob-hide { display: none}

    .sm-text-sm { font-size: 1.5rem;}
    .sm-text-md { font-size: 4rem;}

    .sm-center {text-align: center;}

    .sm-padded-b-05 {padding-bottom: 0.5rem;}

    .sm-margin-b-05 {margin-bottom: 0.5rem;}

    .sm-padded {padding: 3%;}

    .sm-margin {margin: 1rem;}

    .sm-no-padding {
        padding-right: 1rem;
        padding-left: 1rem;
    }

    .sm-padded-t-1 {padding-top: 1rem;}

    .sm-padded-b-22-5 {padding-bottom: 22.5%;}


}



@media (max-width: 36em) {

    .xs-text-sm { font-size: 3rem;}

    .xs-border-r-0 { border-right: none; }
    .xs-border-l-0 { border-left: none; }

    .xs-padding-b {padding-bottom: 31.5%;}

    .xs-padded-08 {padding-top: 0.8rem;}


    .xs-padded-b-30-4 {padding-bottom: 30.4%;}


    .hide-xs {display: none;}
}


@media (max-width: 25em) {

    .xxs-text-sm { font-size: 0.9rem;}

    .xxs-text-md { font-size: 2rem;}

    .xxs-tall-40 { min-height: 40vh; }

    .xss-padded-t-8 {padding-top: 8rem;}

    .xss-padded-t-0 {padding-top: 0;}


}

